k3s-cluster-setup/k8s/dep-type-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-server-type-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: busybox-server-type-2
  template:
    metadata:
      labels:
        app: busybox-server-type-2
    spec:
      containers:
        - name: busybox
          image: busybox
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
          ports:
            - containerPort: 8080
          command:
            - "sh"
            - "-c"
            - |
                while true; do
                  {
                    BODY="Current time: $(date)\n\nEnvironment Variables:\n$(printenv)\n";
                    echo -ne "HTTP/1.1 200 OK\r\nContent-Length: $(echo -ne "$BODY" | wc -c)\r\n\r\n$BODY";
                  } | nc -l -p 8080;
                done
          volumeMounts:
            - name: data-volume
              mountPath: /tmp/data
      restartPolicy: Always
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: control-panel-pvc
