k3s-cluster-setup/k8s/svc-type-2.yml
apiVersion: v1
kind: Service
metadata:
  name: busybox-server-type-2
spec:
  selector:
    app: busybox-server-type-2
  ports:
    - protocol: TCP
      port: 8081      
      targetPort: 8080  
  type: NodePort
